[gd_scene load_steps=16 format=3 uid="uid://b7sdx3ncibqyn"]

[ext_resource type="Script" path="res://Scripts/score_page.gd" id="1_7ql1x"]
[ext_resource type="Texture2D" uid="uid://dhleh1dkpey3i" path="res://Assets/Graphics/Score Background.png" id="2_nl2uh"]
[ext_resource type="FontFile" uid="uid://b73lxxkeo7bsc" path="res://Assets/fonts/cmuntb.ttf" id="3_c62cn"]
[ext_resource type="PackedScene" uid="uid://b5op8tn5ax030" path="res://Scenes/Data.tscn" id="4_mehe2"]
[ext_resource type="PackedScene" uid="uid://cjnhkwa8nmm36" path="res://Scenes/Audio Manager Tool.tscn" id="5_7g5wa"]

[sub_resource type="Animation" id="Animation_mjnsi"]
length = 0.5

[sub_resource type="Animation" id="Animation_daw8n"]
resource_name = "pop_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1306, 729), Vector2(1170, 653)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(-70, -42), Vector2(-10, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gg355"]
_data = {
"RESET": SubResource("Animation_mjnsi"),
"pop_in": SubResource("Animation_daw8n")
}

[sub_resource type="Animation" id="Animation_pxipv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.00392157, 0.0666667, 0.0980392, 1)]
}

[sub_resource type="Animation" id="Animation_0aqm8"]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.004, 0.068, 0.1, 0), Color(0.00392157, 0.0666667, 0.0980392, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sc0f2"]
_data = {
"RESET": SubResource("Animation_pxipv"),
"fade": SubResource("Animation_0aqm8")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xven"]
bg_color = Color(0.419608, 0.584314, 0.611765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyfi7"]
bg_color = Color(0.258824, 0.388235, 0.376471, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp8md"]
bg_color = Color(0.419608, 0.584314, 0.611765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs80p"]
bg_color = Color(0.258824, 0.388235, 0.376471, 0.392157)

[node name="Score Page" type="Node2D"]
script = ExtResource("1_7ql1x")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 324)

[node name="Graphics" type="Node" parent="."]

[node name="Score_Display" type="RichTextLabel" parent="Graphics"]
offset_left = 37.0
offset_top = 98.0
offset_right = 989.0
offset_bottom = 563.0
theme_override_fonts/normal_font = ExtResource("3_c62cn")
theme_override_font_sizes/normal_font_size = 25
fit_content = true

[node name="Background" type="TextureRect" parent="Graphics"]
z_index = -3
offset_left = -6.0
offset_top = -3.0
offset_right = 1158.0
offset_bottom = 652.0
texture = ExtResource("2_nl2uh")
expand_mode = 1

[node name="Animation Player" type="AnimationPlayer" parent="Graphics/Background"]
libraries = {
"": SubResource("AnimationLibrary_gg355")
}

[node name="Transition" type="ColorRect" parent="Graphics"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -21.0
offset_right = 38.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.0666667, 0.0980392, 1)

[node name="Animation Player" type="AnimationPlayer" parent="Graphics/Transition"]
libraries = {
"": SubResource("AnimationLibrary_sc0f2")
}

[node name="Audio Manager Tool" parent="." instance=ExtResource("5_7g5wa")]

[node name="Buttons" type="Node" parent="."]

[node name="Menu_button" type="Button" parent="Buttons"]
offset_left = 1066.0
offset_top = 30.0
offset_right = 1119.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("3_c62cn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7xven")
theme_override_styles/normal = SubResource("StyleBoxFlat_lyfi7")
text = "Menu"

[node name="Clear_stats" type="Button" parent="Buttons"]
offset_left = 37.0
offset_top = 30.0
offset_right = 131.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("3_c62cn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fp8md")
theme_override_styles/normal = SubResource("StyleBoxFlat_xs80p")
text = "Reset Stats"

[node name="Data" parent="." instance=ExtResource("4_mehe2")]

[connection signal="pressed" from="Buttons/Menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Buttons/Clear_stats" to="." method="_on_clear_stats_pressed"]
